# editor-arch-testing

./: .gitignore  CMakeLists.txt  todo.md
src/: common.cpp  common.h  components.cpp  components.h  main.cpp  reactor.cpp  reactor.h  scene.cpp  scene.h  terrain.cpp  terrain.h
src/model/: scene.cpp  scene.h  terrain.cpp  terrain.h
src/view/: entity_list.cpp  entity_list.h  scene_view.cpp  scene_view.h  terrain_view.cpp  terrain_view.h
